WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114812
[WK2] Fix build warning when GESTURE_EVENTS is ON.
https://bugs.webkit.org/show_bug.cgi?id=114812
Summary
[WK2] Fix build warning when GESTURE_EVENTS is ON.
Krzysztof Wolanski
Reported
2013-04-18 06:42:22 PDT
Handle GestureSingleTap in the event type switch.
Attachments
proposed patch
(1.31 KB, patch)
2013-04-18 06:43 PDT
,
Krzysztof Wolanski
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Krzysztof Wolanski
Comment 1
2013-04-18 06:43:45 PDT
Created
attachment 198732
[details]
proposed patch
WebKit Commit Bot
Comment 2
2013-04-22 08:18:56 PDT
Comment on
attachment 198732
[details]
proposed patch Clearing flags on attachment: 198732 Committed
r148883
: <
http://trac.webkit.org/changeset/148883
>
WebKit Commit Bot
Comment 3
2013-04-22 08:18:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug