[WK2] Fix build warning when GESTURE_EVENTS is ON. https://bugs.webkit.org/show_bug.cgi?id=114812

Patch by Krzysztof Wolanski <k.wolanski@samsung.com> on 2013-04-22
Reviewed by Andreas Kling.

Handle GestureSingleTap in the event type switch.

* WebProcess/Plugins/Netscape/x11/NetscapePluginX11.cpp:
(WebKit::NetscapePlugin::platformHandleMouseEvent):

Canonical link: https://commits.webkit.org/133384@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148883 268f45cc-cd09-0410-ab3c-d52691b4dbfc